# simple-file-sharing-backend

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  minio.zsh  postgres.yml  progress.md  readme.md  sample.Dockerfile  sample.docker-compose.yml  servers-ssl.json  servers.json
docker/: env.compose.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240112192033_initial/: migration.sql
scripts/: build.zsh
src/: config.rs  error.rs  impls.rs  main.rs  routes.rs  web.rs
src/archive/aws/: mod.rs
src/auth/: mod.rs
src/auth/controller/: login.rs  logout.rs  mod.rs  refresh.rs
src/auth/request/: login.rs
src/auth/utils/: cookie.rs  decode.rs  encode.rs  mod.rs
src/aws/: copy.rs  create.rs  delete.rs  get.rs  mod.rs  rename.rs  transfer.rs
src/error/: mod.rs  multipart.rs  print.rs  query.rs
src/extractors/: param.rs
src/file/: mod.rs  response.rs  utils.rs
src/file/controller/: collab.rs  content.rs  create.rs  delete.rs  get.rs  mod.rs  restore.rs  update.rs
src/file/controller/get/: content.rs  mod.rs  my.rs  public.rs  shared.rs
src/file/model/: collab.rs  create.rs  mod.rs  query.rs  select.rs  update.rs  validation.rs
src/file/request/: create.rs  query.rs
src/file/service/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/file_version/: model.rs  service.rs
src/folder/: mod.rs  response.rs
src/folder/controller/: collab.rs  content.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
src/folder/controller/get/: content.rs  mod.rs  my.rs  public.rs  shared.rs
src/folder/model/: collab.rs  create.rs  query.rs  select.rs  update.rs  validation.rs
src/folder/request/: create.rs  mod.rs  query.rs  update.rs
src/folder/service/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/tag/controller/: attach.rs  create.rs  delete.rs  get.rs  mod.rs  set.rs  update.rs
src/tag/model/: attach.rs  create.rs  mod.rs  query.rs  select.rs  set.rs  update.rs  validation.rs
src/tag/service/: mod.rs
src/user/: mod.rs  response.rs  service.rs
src/user/controller/: create.rs  delete.rs  get.rs  mod.rs  profile.rs  update.rs
src/user/model/: create.rs  delete.rs  loggedin.rs  mod.rs  select.rs  update.rs  validation.rs
src/user/request/: create.rs  delete.rs  loggedin.rs  mod.rs  update.rs
src/user/service/: mod.rs
src/validation/: aws.rs  file.rs  mod.rs  user.rs  uuid.rs
