[package]
name = "simple-file-sharing-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.28.1", features = ["full"] }

# Backend
axum = { version = "0.6.18", features = [
    "headers",
    "json",
    "query",
    "multipart",
] }
axum_typed_multipart = "0.4.0"
axum-extra = { version = "0.7.4", features = ["cookie"] }
tower-http = { version = "0.4.0", features = ["cors"] }
cookie = "0.17.0"

# Secrets
dotenvy = "0.15.7"
const_env = "0.1.2"

# Time
chrono = { version = "0.4.24", features = ["serde"] }

# Unique IDs
uuid = { version = "1.3.3", features = ["serde"] }
jsonwebtoken = "8.3.0"

# Database
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "postgresql",
] }

# Storage
aws-sdk-s3 = "0.28.0"
mime_guess = "2.0.4"
bytes = "1.4.0"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
http-serde = "1.1.2"

# Error handling
thiserror = "1.0.40"

# Validtion 
validator = { version = "0.16.0", features = ["derive"] }
fancy-regex = "0.11.0"
is_empty = "0.2.0"

# Debugging
backtrace-on-stack-overflow = "0.3.0"
