[package]
name = "simple-file-sharing-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]
resolver = "2"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7.10", features = ["io"] }

# Backend
axum = { version = "0.7.2" }
axum_typed_multipart = "0.11.0"
axum-extra = { version = "0.9.0", features = ["cookie"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower-http = { version = "0.5.0", features = ["cors"] }
cookie = "0.18.0"

# Secrets
dotenvy = "0.15.7"
argon2 = { version = "0.5.2", features = ["std"] }

# Time
chrono = { version = "0.4.31", features = ["serde"] }

# Unique IDs
uuid = { version = "1.6.1", features = ["serde"] }
jsonwebtoken = "9.2.0"

# Database
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "postgresql",
] }

# Storage
aws-sdk-s3 = { version = "1.8.0", features = ["rt-tokio"] }
mime_guess = "2.0.4"
bytes = "1.5.0"
zip = "0.6.6"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
http-serde = "2.0.0"

# Error handling
thiserror = "1.0.51"
anyhow = "1.0.75"

# Validation 
validator = { version = "0.17.0", features = ["derive"] }
fancy-regex = "0.13.0"
is_empty = "0.2.0"
